version2/CONTRIBUTORS-sap_launchpad.md
# Contributors to community.sap_launchpad

Thank you to all contributors who have helped make this project possible!

## All Contributors

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 41 | 10515 | 2025-09-23 |
| [Sean Freeman](https://github.com/sean-freeman) | 35 | 2915 | 2025-03-31 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 12 | 885 | 2023-11-12 |
| [Markus Koch](https://github.com/rhmk) | 1 | 32 | 2022-10-21 |
| 朱聖黎 Zhu Sheng Li | 1 | 209 | 2022-04-11 |

## Contributions by Role

### Role: sap_software_download

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 15 | 2408 | 2025-09-10 |

## Contributions by Module

### Module: license_keys.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 9 | 351 | 2023-11-12 |
| [Marcel Mamula](https://github.com/marcelmamula) | 1 | 161 | 2025-09-09 |

### Module: maintenance_planner_stack_xml_download.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 4 | 115 | 2025-09-09 |
| [Sean Freeman](https://github.com/sean-freeman) | 3 | 156 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |

### Module: systems_info.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 5 | 121 | 2023-11-12 |
| [Marcel Mamula](https://github.com/marcelmamula) | 1 | 62 | 2025-09-09 |

### Module: maintenance_planner_files.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 3 | 119 | 2025-09-09 |
| [Sean Freeman](https://github.com/sean-freeman) | 2 | 161 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |

### Module: software_center_download.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 10 | 598 | 2025-09-09 |
| [Sean Freeman](https://github.com/sean-freeman) | 6 | 189 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |
| [Markus Koch](https://github.com/rhmk) | 1 | 11 | 2022-10-21 |
| 朱聖黎 Zhu Sheng Li | 1 | 44 | 2022-04-11 |

