version3/CONTRIBUTORS-sap_launchpad.md
# Contributors to community.sap_launchpad

Thank you to all contributors who have helped make this project possible!

We welcome contributions! Please see our [contributing guidelines](https://sap-linuxlab.github.io/initiative_contributions/) to get started.

## Maintainers

The following people are the maintainers of this collection:

### SUSE

- [Marcel Mamula](https://github.com/marcelmamula)


For specific role maintainers, see the `README.md` file in the corresponding role's directory.

## All Contributors

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Sean Freeman](https://github.com/sean-freeman) | 35 | 2915 | 2025-03-31 |
| [Marcel Mamula](https://github.com/marcelmamula) | 31 | 4460 | 2025-09-03 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 12 | 885 | 2023-11-12 |
| [Markus Koch](https://github.com/rhmk) | 1 | 32 | 2022-10-21 |
| 朱聖黎 Zhu Sheng Li | 1 | 209 | 2022-04-11 |

## Contributions by Role

### Role: sap_software_download

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 13 | 2360 | 2025-09-03 |

## Contributions by Module

### Module: license_keys.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 9 | 351 | 2023-11-12 |

### Module: maintenance_planner_stack_xml_download.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 3 | 30 | 2025-04-03 |
| [Sean Freeman](https://github.com/sean-freeman) | 3 | 156 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |

### Module: systems_info.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 5 | 121 | 2023-11-12 |

### Module: maintenance_planner_files.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 2 | 8 | 2025-03-27 |
| [Sean Freeman](https://github.com/sean-freeman) | 2 | 161 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |

### Module: software_center_download.py

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Marcel Mamula](https://github.com/marcelmamula) | 8 | 352 | 2025-05-13 |
| [Sean Freeman](https://github.com/sean-freeman) | 6 | 189 | 2024-11-09 |
| [Matthias Winzeler](https://github.com/MatthiasWinzeler) | 1 | 3 | 2023-11-17 |
| [Markus Koch](https://github.com/rhmk) | 1 | 11 | 2022-10-21 |
| 朱聖黎 Zhu Sheng Li | 1 | 44 | 2022-04-11 |

